<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="jp.ac.okinawa_ct.nitoc_ict.aroa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_trial"
        android:name="jp.ac.okinawa_ct.nitoc_ict.aroa.ui.add_trial.AddTrialFragment"
        android:label="@string/title_add_trial"
        tools:layout="@layout/fragment_add_trial" />

    <fragment
        android:id="@+id/navigation_check_record"
        android:name="jp.ac.okinawa_ct.nitoc_ict.aroa.ui.check_record.CheckRecordFragment"
        android:label="@string/title_check_record"
        tools:layout="@layout/fragment_check_record" />
</navigation>